// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FraudReport renders just the input choices by default 1`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes (explain below)",
          "value": "Yes",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "No",
        },
      ]
    }
    hint={
      <Details
        label="What counts as paid leave fraud?"
      >
        <ul
          className="usa-list"
        >
          <li>
            Using someone’s personal information to fraudulently collect benefits
          </li>
          <li>
            Providing forged or falsified documents
          </li>
          <li>
            Withholding information or providing false information to the Department of Family and Medical Leave
          </li>
        </ul>
      </Details>
    }
    label={
      <ReviewHeading
        level="2"
      >
        Do you have any reason to suspect this is fraud?
      </ReviewHeading>
    }
    name="isFraud"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
  />
  <ConditionalContent
    visible={false}
  >
    <Heading
      className="text-error"
      level="4"
      weight="bold"
    >
      Please provide a comment below
    </Heading>
    <Alert
      heading="You are reporting fraud."
      state="warning"
    >
      We take allegations about fraud seriously. Selecting this will begin further investigation. Please only select if you are convinced this is fraudulent. If you have questions, feel free to call us at (833) 344‑7365 from 8am‑5pm ET.
    </Alert>
  </ConditionalContent>
</Fragment>
`;

exports[`FraudReport renders the alert if "Yes" is selected 1`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": true,
          "label": "Yes (explain below)",
          "value": "Yes",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "No",
        },
      ]
    }
    hint={
      <Details
        label="What counts as paid leave fraud?"
      >
        <ul
          className="usa-list"
        >
          <li>
            Using someone’s personal information to fraudulently collect benefits
          </li>
          <li>
            Providing forged or falsified documents
          </li>
          <li>
            Withholding information or providing false information to the Department of Family and Medical Leave
          </li>
        </ul>
      </Details>
    }
    label={
      <ReviewHeading
        level="2"
      >
        Do you have any reason to suspect this is fraud?
      </ReviewHeading>
    }
    name="isFraud"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
  />
  <ConditionalContent
    visible={true}
  >
    <Heading
      className="text-error"
      level="4"
      weight="bold"
    >
      Please provide a comment below
    </Heading>
    <Alert
      heading="You are reporting fraud."
      state="warning"
    >
      We take allegations about fraud seriously. Selecting this will begin further investigation. Please only select if you are convinced this is fraudulent. If you have questions, feel free to call us at (833) 344‑7365 from 8am‑5pm ET.
    </Alert>
  </ConditionalContent>
</Fragment>
`;
